css/styles.css
:root {
  --text: black;
  --meta-text: #636a66;
  --highlight: rgb(68, 121, 68);
  --link: rgb(68, 121, 68);
  --visited-link: rgb(37, 65, 37);
  --code-text: rgb(46, 82, 46);
  --code-background: rgb(224, 245, 230);
  --border: color-mix(in srgb, var(--bg) 85%, black);
  --bg: rgb(248, 251, 243);
  --image-load: rgb(239, 242, 232);
  --secondary-text: rgb(64, 64, 64);
  --header: var(--text);
  
  --container-width: 735px;
  --container-padding: 15px; /* done in bootstrap */
  --sidenote-max-width: 320px;
  --content-padding: 25px;
  --outside-padding: 25px; /* this is added to by padding-left for the even-sidenotes to give more buffer from ToC */
}
::selection {
  background: var(--highlight);
  color: #fff;
}
/* Images on iOS Safari keep showing highlight, so disable that */
@supports (-webkit-touch-callout: none) {
  a[data-fancybox="gallery"] img {
    -webkit-user-select: none;
    user-select: none;
  }
}
::-moz-selection {
  background: var(--highlight);
  color: #fff;
}
*, *:before, *:after {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}
@font-face {
  font-family: 'Crimson Pro';
  font-stretch: normal; /* Note that font-stretch is a % of normal width */
  font-style: normal; /* See note below */
  font-weight: 340 700;
  src: url('/themes/folium/fonts/Crimson_Pro/CrimsonPro-VariableFont_wght.woff2') format('woff2');
}
@font-face {
  font-family: 'Drop Cap';
  src: url('/themes/folium/fonts/dropcap.woff2') format('woff2'), url('/themes/folium/fonts/dropcap.ttf') format('truetype');
}
body {
  margin: 0;
  font: 20px "Crimson Pro", serif;
  font-weight: 340;
  background: var(--bg);
  color: var(--text);
  font-smooth: always;
  overscroll-behavior-x: none;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-text-size-adjust: 100%;
      -ms-text-size-adjust: 100%;
}
a {
  transform: translate3d(0, 0, 0);
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -o-transform: translate3d(0, 0, 0);
  transition: ease-in-out 0.1s;
  -webkit-transition: ease-in-out 0.1s;
  -moz-transition: ease-in-out 0.1s;
  -o-transition: ease-in-out 0.1s;
  color: var(--link);
  position: relative;
  text-decoration: none;

  text-decoration-skip: ink;

  &:hover, &:focus {
    text-decoration: underline;
  }
  &.unpublished {
    &:hover, &:focus {
      text-decoration: line-through underline;
    }
  }
}
a.inline {
  text-decoration: underline;
  text-decoration-color: var(--link);
  text-underline-offset: 0.1em;
  transition: none;
}
article[id] {
  border-bottom: 0px;
}
article[id] a.inline:visited {
  color: var(--visited-link);
  text-decoration-color: var(--visited-link);
}
article[id] a.inline:hover {
  color: var(--link);
  text-decoration-color: var(--link);
  text-decoration-thickness: 0.14em;
  text-decoration-skip-ink: none;
}
a:hover, a:focus {
  color: var(--link);
}
a:focus {
  outline: thin dotted;
  outline: 5px auto -webkit-focus-ring-color;
  outline-offset: -2px;
}
a.unpublished {
  text-decoration: line-through;
}
hr {
  margin: 30px 0;
  border: 0;
  border-top: 1px solid var(--border);

  &.fleuron {
    &:before {
      content: "❧";
      display: block;
      color: var(--link);
      text-align: center;
      position: absolute;
      left: calc(50% - 25px);
      margin-top: -13px;
      width: 50px;
      height: 40px;
      background: var(--bg);
    }
  }

  &.fleuron.alt {
    &:before {
      content: "❦";
    }
  }
}
/* Get strikethrough to render in the right place */
s {
  text-decoration: underline var(--text) .1em;
  text-underline-offset: -.25em;
  text-decoration-skip-ink: none;
}
/** Table **/
table {
  margin: 0 auto 10px auto;
  text-align: center;
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
}
th {
  text-align: left;
}
td, th {
  padding: 2px;
}
/* Header linking */
article > h2,
article > h3,
article > h4,
article > h5,
article > h6,
section#comments > h2 {
  padding-top: 20px;
  margin-top: 0px;
  cursor: pointer;
  position: relative;
}
article > h2:hover:before,
article > h3:hover:before,
article > h4:hover:before,
article > h5:hover:before,
article > h6:hover:before,
section#comments > h2:hover:before {
  content: '#';
  color: #777777;
  position: absolute;
  padding-right: 7px;
  left: -20px;
}
@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}
@media (min-width: 992px) {
  .container {
    width: 970px;
  }
}
@media (min-width: 1200px) {
  .container {
    width: 1170px;
  }
}
.container {
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
  width: var(--container-width);
  min-height: calc(100vh - 228px);
  container-type: inline-size;
}
.padding-container {
  /* iOS 11 */
  padding-left: constant(safe-area-inset-left);
  padding-right: constant(safe-area-inset-right);
  
  /* iOS 11.2+ */
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
}
/** Header Selection */
.trigger {
  display: flex;
  gap: 12px;
  flex-direction: column;
  position: fixed;
  border-radius: 5px;
  padding: 12px 5px;
  left: 8px;
  top: 50%;
  transform: translateY(-50%) scale(.99);
  background: none;
  border: none;
  line-height: 1em;
  font-size: 0.8em;
  outline: none;
  font-family: bold;
  cursor: pointer;
  opacity: 0.8;

  transition: 0.3s ease;
}
.trigger:hover {
  opacity: 1;
  transform: translateY(-50%) scale(1);
  background-color: color-mix(in srgb, var(--bg) 95%, black);
}
.trigger span {
  height: 1px;
  background-color: #868787;
  width: 12px;
}
.trigger span.header3 {
  width: 10px;
  margin-left: 2px;
}
.trigger span.header4 {
  width: 8px;
  margin-left: 4px;
}
.trigger span.active {
  background-color: #363737;
}
/* ... */

